Fix: Render memory issue, Reduced API call to get invoices and Invoice Summary